--- a/source/Imitation.ipynb
+++ b/source/Imitation.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "size <- 50\n",
+    "size <- 10\n",
     "Network0 <- Generate_Network_t0(size = size, sparsity = .75)\n",
     "LambdaV <- rep(.8, size)\n",
     "total_Lambda <- sum(LambdaV)\n",
@@ -204,16 +204,16 @@
     {
      "data": {
       "text/html": [
-       "645"
+       "30"
       ],
       "text/latex": [
-       "645"
+       "30"
       ],
       "text/markdown": [
-       "645"
+       "30"
       ],
       "text/plain": [
-       "[1] 645"
+       "[1] 30"
       ]
      },
      "metadata": {},
@@ -222,16 +222,16 @@
     {
      "data": {
       "text/html": [
-       "748"
+       "42"
       ],
       "text/latex": [
-       "748"
+       "42"
       ],
       "text/markdown": [
-       "748"
+       "42"
       ],
       "text/plain": [
-       "[1] 748"
+       "[1] 42"
       ]
      },
      "metadata": {},
@@ -240,16 +240,16 @@
     {
      "data": {
       "text/html": [
-       "842"
+       "63"
       ],
       "text/latex": [
-       "842"
+       "63"
       ],
       "text/markdown": [
-       "842"
+       "63"
       ],
       "text/plain": [
-       "[1] 842"
+       "[1] 63"
       ]
      },
      "metadata": {},
@@ -260,6 +260,27 @@
     "sum(Network0)\n",
     "sum(Network1)\n",
     "sum(Network2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ed97a961-e0cd-442b-979e-9852b4a21319",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in dimnames(x) <- dn: length of 'dimnames' [1] not equal to array extent\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in dimnames(x) <- dn: length of 'dimnames' [1] not equal to array extent\nTraceback:\n",
+      "1. `rownames<-`(`*tmp*`, value = c(\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \n . \"G\", \"H\", \"I\", \"J\", \"K\", \"L\", \"M\", \"N\", \"O\"))"
+     ]
+    }
+   ],
+   "source": [
+    "rownames(Network0) <- LETTERS[1:10]\n",
+    "colnames(Network0) <- LETTERS[1:10]"
    ]
   },
   {
