--- a/source/Imitation.ipynb
+++ b/source/Imitation.ipynb
@@ -264,23 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "ed97a961-e0cd-442b-979e-9852b4a21319",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in dimnames(x) <- dn: length of 'dimnames' [1] not equal to array extent\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in dimnames(x) <- dn: length of 'dimnames' [1] not equal to array extent\nTraceback:\n",
-      "1. `rownames<-`(`*tmp*`, value = c(\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \n . \"G\", \"H\", \"I\", \"J\", \"K\", \"L\", \"M\", \"N\", \"O\"))"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "rownames(Network0) <- LETTERS[1:10]\n",
-    "colnames(Network0) <- LETTERS[1:10]"
+    "rownames(Network2) <- LETTERS[1:10]\n",
+    "colnames(Network2) <- LETTERS[1:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5047fa0a-a902-4b4c-a80c-948f4ca8b87e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.csv(Network2, file = \"Net2_10.csv\", row.names = TRUE)"
    ]
   },
   {
